--- a/style/contacts.css
+++ b/style/contacts.css
@@ -410,12 +410,22 @@
     font-weight: var(--weight-400);
 }
 
+.succes-created-container {
+    width: 100%;
+    height: 74px;
+    /* overflow: hidden; */
+    margin-top: 80px;
+    position: relative;
+}
+
 .creates-msg {
     height: 74px;
     width: 326px;
-    position: fixed;
-    bottom: 200px;
-    left: 750px;
+    position: absolute;
+    /* bottom: 100px;
+    /* bottom: 200px; */
+    /* left: 750px; */
+    left: 0; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -460,13 +470,13 @@
     }
 
     100% {
-        left: 750px;
+        left: 0;
     }
 }
 
 @keyframes createdMsgOut {
     0% {
-        left: 750px;
+        left: 0;
     }
 
     100% {
