--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,10 @@
 @import url(./keyframes.css);
 @import url(./responsive.css);
 @import url(./nav_profile_overlay.css);
-@import url(./contacts_responsive.css);
+@import url(./contacts_keyframes.css);
+@import url(./contacts_responsiv.css);
 @import url(./contacts_overlay.css);
+@import url(./contacts_overlay_responsiv.css);
 @import url(./overlay_board_template.css);
 @import url(./add_task.css);
 @import url(./header.css);
