--- a/style/standart.css
+++ b/style/standart.css
@@ -46,6 +46,8 @@ body {
   --font-size-20: 20px;
   --font-size-21: 21px;
   --font-size-27: 27px;
+  --font-size-30: 30px;
+  --font-size-36: 36px;
   --font-size-47: 47px;
   --font-size-61: 61px;
   --font-size-64: 64px;
