summary title text style changed. next step: Ordering the  title

--- a/style/summary_mobile.css
+++ b/style/summary_mobile.css
@@ -19,6 +19,9 @@
   position: relative;
   z-index: 1;
   margin-top: 40px;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: flex-start;
 }
 /* Greeting container fullscreen animation - initially visible then fades out */
 .summary-greeting-container {
