--- a/style/contacts_overlay_responsiv.css
+++ b/style/contacts_overlay_responsiv.css
@@ -21,9 +21,10 @@
     .overlay-card {
         height: 80%;
         width: 396px;
-        animation: fadeInRes 300ms linear forwards;
+        /* animation: fadeInRes 300ms linear forwards; */
         flex-direction: column;
     }
+
 
     .overlay-left-side {
         border-radius: 30px 30px 0 0;
