--- a/style/task_overlay.css
+++ b/style/task_overlay.css
@@ -415,6 +415,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     display: flex;
     flex-direction: column;
     gap: 1px;
+    margin-bottom: 8px;
 }
 
 .choose-paticipant {
@@ -479,6 +480,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     border: none;
     outline: none;
     font-size: 16px;
+    width: 80%;
 }
 
 .change-subtasks-list {
@@ -568,4 +570,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .tf_r180{
     transform: rotate(180deg);
+}
+
+.bgc_j{
+    background-color: #2A3647;
+    color: white;
 }
