--- a/style/contacts_responsiv.css
+++ b/style/contacts_responsiv.css
@@ -277,14 +277,9 @@
         background-color: #2A3647;
     }
 
-    /* .responsiv-edit-delete-menu-container {
-        width: 100%;
-        flex: 1;
-    } */
-
     .responsiv-edit-delete-menu {
         z-index: 1;
-        position: absolute;
+        position: fixed;
         height: 100px;
         width: 116px;
         background-color: #FFFFFF;
