--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@
 @import url(./board.css);
 @import url(./navbar.css);
 @import url(./contacts.css);
+@import url(./contacts_template.css);
 @import url(./task_overlay.css);
 @import url(./login.css);
 @import url(./sign_up.css);
