--- a/style/contacts_keyframes.css
+++ b/style/contacts_keyframes.css
@@ -1,36 +1,40 @@
 @keyframes contactTemplate {
-    0% {
+    from {
         left: 100vw;
         display: flex;
     }
 
-    100% {
+    to {
         left: 0;
     }
 }
 
 @keyframes createdMsgIn {
-    0% {
+    from {
         left: 100vw;
     }
 
-    100% {
+    to {
         left: 0;
     }
 }
 
 @keyframes createdMsgOut {
-    0% {
+    from {
         left: 0;
     }
 
-    100% {
+    to {
         left: 100vw;
     }
 }
 
 @keyframes overlayShadow {
-    100% {
+    from {
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+    to {
         background-color: rgba(0, 0, 0, 0.2);
     }
 }
@@ -38,18 +42,16 @@
 @media (max-width: 1440px) {
 
     @keyframes fadeIn {
-
-        0% {
+        from {
             left: 100%;
         }
 
-        100% {
+        to {
             left: 8%;
         }
     }
 
     @keyframes fadeOut {
-        
         from {
             left: 8%;
         }
@@ -63,18 +65,16 @@
 @media (max-width: 1400px) {
 
     @keyframes fadeIn {
-
-        0% {
+        from {
             left: 100%;
         }
 
-        100% {
+        to {
             left: 5%;
         }
     }
 
     @keyframes fadeOut {
-        
         from {
             left: 5%;
         }
@@ -86,11 +86,12 @@
 }
 
 @media (max-width: 1100px) {
-    
+
     @keyframes fadeIn {
         from {
             top: 100vh;
         }
+
         to {
             top: 10%;
         }
@@ -100,6 +101,7 @@
         from {
             top: 10%;
         }
+
         to {
             top: 100vh;
         }
@@ -110,7 +112,7 @@
 
     @keyframes smallMenuIn {
         from {
-            right: -250px;
+            right: -116px;
         }
 
         to {
@@ -129,21 +131,21 @@
     }
 
     @keyframes createdMsgIn {
-        0% {
+        from {
             top: 100vh;
         }
 
-        100% {
+        to {
             top: 0;
         }
     }
 
     @keyframes createdMsgOut {
-        0% {
+        from {
             top: 0;
         }
 
-        100% {
+        to {
             top: 100vh;
         }
     }
