--- a/style/summary_responsive.css
+++ b/style/summary_responsive.css
@@ -1,7 +1,7 @@
 @media (max-width: 1110px) {
     .summary-title {
         font-size: 27px;
-        margin-top: 50px;
+        margin-top: 60px;
         gap: 16px;
     }
 
@@ -19,9 +19,8 @@
 
 @media (max-width: 760px) {
     .summary-title {
-        margin-left: 32px;
         flex-direction: column;
-        margin-top: 40px;
+        margin-left: 32px;
     }
 
     .summary-container {
@@ -49,10 +48,9 @@
     .summary-title {
         font-size: 24px;
         margin-left: 28px;
-        margin-top: 32px;
+        margin-top: 50px;
     }
 
-    /* Reduce all text sizes by ~20% for mobile */
     .s-txt-16-400 {
         font-size: 13px;
     }
@@ -77,15 +75,6 @@
         font-size: 34px;
     }
 
-    #summary-title-360 {
-        font-size: 32px;
-    }
-
-    .summary-title-text {
-        font-size: 16px;
-        gap: 16px;
-    }
-
     .summary-greeting {
         font-size: 26px;
     }
@@ -94,10 +83,19 @@
         font-size: 34px;
     }
 
-    /* Reduce SVG/Icon sizes by ~20% */
+    .icon-edit {
+        width: 30px;
+        height: 24px;
+    }
+
+    .icon-arrow {
+        width: 30px;
+        height: 24px;
+    }
+
     .s-img {
-        width: 40px;
-        height: 40px;
+        width: 34px;
+        height: 34px;
     }
 
     .s-img-2 {
@@ -115,18 +113,12 @@
         height: 40px;
     }
 
-    /* Adjust container sizes */
     .summary-board-urgent {
         width: 88px;
-        gap: 11px;
-    }
-
-    .summary-panel {
-        height: 96px;
     }
 
     .summary-board-panel {
-        height: 96px;
+        padding: 5px;
     }
 
     .s-panel-gap {
@@ -141,7 +133,6 @@
         gap: 19px;
     }
 
-    /* Adjust separators */
     .summary-title-separator-blue {
         height: 36px;
     }
@@ -153,16 +144,13 @@
 
 @media (max-width: 380px) {
     .summary-title {
-        font-size: 20px;
-        margin-left: 20px;
-        margin-top: 24px;
+        margin-top: 50px;
     }
 
     .summary-container {
-        margin-top: 80px;
+        margin-top: 50px;
     }
 
-    /* Further reduce text sizes for very small screens */
     .s-txt-47-500 {
         font-size: 22px;
     }
@@ -175,37 +163,12 @@
         font-size: 28px;
     }
 
-    #summary-title-360 {
-        font-size: 26px;
-    }
-
     .summary-greeting {
         font-size: 22px;
     }
 
     #summary-greeting-name {
         font-size: 28px;
-    }
-
-    /* Further reduce icon sizes */
-    .s-img {
-        width: 35px;
-        height: 35px;
-    }
-
-    .s-img-2 {
-        width: 32px;
-        height: 32px;
-    }
-
-    .icon-wrap {
-        width: 35px;
-        height: 35px;
-    }
-
-    .icon-wrap-2 {
-        width: 35px;
-        height: 35px;
     }
 
     .summary-board-urgent {
