--- a/style/contacts_responsiv.css
+++ b/style/contacts_responsiv.css
@@ -3,7 +3,7 @@
         width: 84%;
     }
 
-    .contact {
+    .contacts-contact-section {
         width: calc(100vw - 456px);
     }
 
@@ -50,16 +50,6 @@
 
     .contact-list-area {
         height: calc(100vh - (96px + 80px));
-    }
-
-    .overlay-right-side {
-        position: relative;
-    }
-
-    .overlay-character-icon {
-        position: absolute;
-        left: 0;
-        transform: translateX(-50%);
     }
 
     .add-contact-content-container {
@@ -118,12 +108,12 @@
     .contact-list-container,
     .contact-list-content,
     .contact-list,
-    .contact,
+    .contacts-contact-section,
     .contact-info-big-container {
         width: 100%;
     }
 
-    .contact {
+    .contacts-contact-section {
         display: none;
     }
 
