--- a/style/navbar.css
+++ b/style/navbar.css
@@ -7,6 +7,8 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    z-index: 100;
 }
 
 .navbar-logo {
