--- a/style/task_overlay.css
+++ b/style/task_overlay.css
@@ -576,3 +576,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     background-color: #2A3647;
     color: white;
 }
+
+.bgc_j:hover{
+    background-color: #091931;
+}
